--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   },
   "type": "module",
   "dependencies": {
-    "d3": "^7.8.5",
     "@sveltejs/adapter-static": "^2.0.2",
     "@sveltejs/svelte-scroller": "^2.0.7",
-    "mapbox-gl": "^2.14.1"
+    "d3": "^7.8.5",
+    "mapbox-gl": "^2.14.1",
+    "yootils": "^0.3.1"
   }
 }
